--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "@line/bot-sdk": "^5.2.0",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "request": "^2.87.0"
   }
 }
