--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@line/bot-sdk": "^5.2.0",
     "express": "^4.16.2",
-    "request": "^2.87.0"
+    "npm": "^6.1.0",
+    "request-promise": "^4.2.2"
   }
 }
