--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@line/bot-sdk": "^5.2.0",
     "express": "^4.16.2",
     "npm": "^6.1.0",
+    "request": "^2.87.0",
     "request-promise": "^4.2.2"
   }
 }
