--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "for hands-on",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js",
+    "test": "mocha",
     "start": "node index.js"
   },
   "repository": {
@@ -18,7 +18,11 @@
   "license": "MIT",
   "dependencies": {
     "@line/bot-sdk": "^5.2.0",
+    "chai": "^4.1.2",
+    "config": "^1.30.0",
     "express": "^4.16.2",
+    "mocha": "^5.2.0",
+    "mongoose": "^5.2.4",
     "npm": "^6.1.0",
     "request": "^2.87.0",
     "request-promise": "^4.2.2"
