--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "start": "node index.js"
+    "start": "NODE_ENV=dev; node index.js"
   },
   "repository": {
     "type": "git",
